# letce2-plugin-docker

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile.blz
example/bentpipe-01/: experiment.cfg  pathloss.eel
example/bentpipe-02/: antennaprofilemanifest.xml  experiment.cfg  locations.eel
example/ieee80211abg-01/: experiment.cfg  letce2.cfg
example/rfpipe-01/: experiment.cfg  manifest  mgen
example/rfpipe-01/host/: docker-compose.yml  eventservice.xml  otestpoint-broker.xml  prestart.local  scenario.eel  start.local
example/rfpipe-01/node-1/: emane-platform.xml  functions  node-prestart  otestpoint-probe-emane-virtualtransport.xml  otestpoint.xml
example/rfpipe-01/node-2/: emane-platform.xml  init  node-prestart  otestpoint-probe-emane-virtualtransport.xml  otestpoint.xml
example/rfpipe-01/node-3/: biz-init  biz-init.local  emane-platform.xml  init.local  node-prestart  olsrd.conf  otestpoint-probe-emane-virtualtransport.xml  otestpoint.xml
example/rfpipe-01/node-4/: emane-platform.xml  node-prestart  otestpoint-probe-emane-virtualtransport.xml  otestpoint.xml
example/rfpipe-01/node-5/: emane-platform.xml  emane-rfpipe-nem.xml  node-prestart  otestpoint-probe-emane-virtualtransport.xml  otestpoint.xml
example/tdma-01/: experiment.cfg
example/templates/application-host/: biz-init.local
example/templates/common/: functions  node-prestart
example/templates/host/: start.local
example/templates/jammer/: init.local
example/templates/monitor/: init.local
example/templates/radio/bentpipe/: emane-bentpipe-nem.xml  (+2 more)
(+21 files in other folders)
