[project]
name = "letce2-plugin-docker"
version = "0.1.0"
description = "Docker container plugin for letce2 - modern alternative to LXC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mako>=1.1.0",
    "docker>=6.0.0",
]

[project.entry-points."letce2.plugins"]
docker = "letce2.plugins.docker.plugin:Plugin"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["letce2*"]

[tool.setuptools.package-data]
"letce2.plugins.docker" = ["templates/*"]

